Scrollbar seems to take up page width, hopeful fix

--- a/public/css/custom.css
+++ b/public/css/custom.css
@@ -4,6 +4,10 @@
   overflow: auto;
 }
 
+html {
+  overflow-y: scroll;
+}
+
 body {
   background-image: url(/public/body-background.png);
   background-repeat: repeat;
